[gd_scene load_steps=6 format=2]

[ext_resource path="res://addons/godaw/waveform_player.gd" type="Script" id=1]
[ext_resource path="res://ChordButton.gd" type="Script" id=2]

[sub_resource type="AudioStreamGenerator" id=1]
mix_rate = 32000.0

[sub_resource type="AudioStreamGenerator" id=2]
mix_rate = 32000.0

[sub_resource type="AudioStreamGenerator" id=3]
mix_rate = 32000.0

[node name="Chord" type="Control"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ChordButton" type="Button" parent="."]
margin_left = 1.17892
margin_top = 9.82108
margin_right = 39.1789
margin_bottom = 29.8211
toggle_mode = true
text = "Play"
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WaveformPlayer" type="AudioStreamPlayer" parent="ChordButton"]
stream = SubResource( 1 )
volume_db = -80.0
script = ExtResource( 1 )

[node name="WaveformPlayer2" type="AudioStreamPlayer" parent="ChordButton"]
stream = SubResource( 2 )
volume_db = -80.0
script = ExtResource( 1 )
note = 4

[node name="WaveformPlayer3" type="AudioStreamPlayer" parent="ChordButton"]
stream = SubResource( 3 )
volume_db = -80.0
script = ExtResource( 1 )
note = 7

[connection signal="toggled" from="ChordButton" to="ChordButton" method="_on_ChordButton_toggled"]
